packages build was corrected

--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
     "ng": "ng",
     "start": "ng serve -o",
     "build": "ng build",
-    "build:github": "npm run delete:docs && npm run build:href && npm run copy:dist",
+    "build:github": "npm run delete:docs && npm run build:href && npm run copy:dist && npm run copy:distBrowser",
     "build:href": "ng build --base-href ./",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "delete:docs": "del docs",
-    "copy:dist": "copyfiles dist/bases/browser/* ./docs -f"
+    "delete:docsBrowser": "del docs/browser",
+    "copy:dist": "copyfiles dist/bases/* ./docs -f",
+    "copy:distBrowser": "copyfiles dist/bases/browser/* ./docs -f"
   },
   "private": true,
   "dependencies": {
